--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,6 @@ buildscript {
     dependencies {
         classpath 'org.wisepersist:gwt-gradle-plugin:1.0.6'
         classpath 'com.android.tools.build:gradle:3.1.0'
-        
-
     }
 }
 
@@ -86,10 +84,12 @@ project(":html") {
 project(":core") {
     apply plugin: "java"
 
+    sourceSets.test.java.srcDirs = ["/test"]
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        
+        compile "org.twitter4j:twitter4j-core:4.0.6"
+        testCompile 'junit:junit:4.12'
     }
 }
 
